log
Thu 11 May 2023 10:22:24 PM UTC: 
 tests:  0|4
total_score: 0/70
f9f0270
Thu 11 May 2023 10:32:43 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
48d6b5e
Thu 11 May 2023 10:34:00 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
4bd04f5
Thu 11 May 2023 10:38:04 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   22 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
55573e1
